--- a/tests/testthat/.gitignore
+++ b/tests/testthat/.gitignore
@@ -1,5 +1,7 @@
 Runhdp3-fast96-2-cores
 RunhdpInternal.testdata
 SBS96.ground.truth/ground
-RunAndEvalHdp5-fast96-2-cores
-RunAndEvalHdp4-fast96-2-cores
+test-RunAnd..etc4_out_dir
+test-RunAnd..etc5_out_dir
+test_Runhdp4-fast96_out_dir
+test_Runhdp5-fast96_out_dir
