deleted unneeded test files

--- a/tests/testthat/.gitignore
+++ b/tests/testthat/.gitignore
@@ -5,3 +5,4 @@ test-RunAnd..etc4_out_dir
 test-RunAnd..etc5_out_dir
 test_Runhdp4-fast96_out_dir
 test_Runhdp5-fast96_out_dir
+RunAndEvalHdp5-fast96-2-cores
