--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,14 @@
 export(PlotExposure)
 export(PlotExposureByRange)
 export(RunAndEvalHdp4)
-export(RunAndEvalHdp5)
 export(Runhdp4)
-export(Runhdp5)
 export(RunhdpInternal4)
-export(RunhdpInternal5)
 export(SortExp)
 export(xmake.s)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(graphics,barplot)
+importFrom(graphics,legend)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,text)
