documentation updates and scaffolding for debugging c code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(RunAndEvalHdp4)
 export(Runhdp4)
 export(RunhdpInternal4)
 export(SortExp)
+export(xRunhdpInternal)
 export(xmake.s)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
