--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mSigHdp
 Title: Mutational signature extraction using hdp (Hierarchical Dirichlet Process)
-Version: 0.0.0.9013
+Version: 0.0.0.9014
 Authors@R: 
     person(given = "Steven",
            family = "Rozen",
@@ -14,7 +14,7 @@ Encoding: UTF-8
 LazyData: true
 Language: en-US
 biocViews:
-Imports: hdpx,
+Imports: hdpx (>= 0.1.5.0014),
     SynSigGen
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.5)
