--- a/tests/testthat/.gitignore
+++ b/tests/testthat/.gitignore
@@ -2,6 +2,5 @@ Runhdp3-fast96-2-cores
 SBS96.ground.truth/ground
 test-RunAnd..etc4_out_dir
 test-RunAnd..etc5_out_dir
-test_Runhdp4-fast96_out_dir
-test_Runhdp5-fast96_out_dir
 RunAndEvalHdp5-fast96-2-cores
+/*_out_dir/*
