code cleanup and correct test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,11 @@ export(AnalyzeAndPlotretval)
 export(BurninIteration)
 export(ChainsDiagnosticPlot)
 export(CombinePosteriorChains)
-export(ExtendIterationAndPosterior)
 export(MultipleSetupAndPosterior)
 export(PlotExposure)
 export(PlotExposureByRange)
 export(RunHdpParallel)
+export(SetupAndActivate)
 export(SetupAndPosterior)
 export(SortExp)
 importFrom(grDevices,dev.off)
