trying to ignore test outpout

--- a/tests/testthat/.gitignore
+++ b/tests/testthat/.gitignore
@@ -3,4 +3,4 @@ SBS96.ground.truth/ground
 test-RunAnd..etc4_out_dir
 test-RunAnd..etc5_out_dir
 RunAndEvalHdp5-fast96-2-cores
-/*_out_dir/*
+*_out_dir/*
