ParallelPosteriorafterBurnin. It add gibbs sampling after a burned-in hdplist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(BurninIteration)
 export(ChainsDiagnosticPlot)
 export(CombinePosteriorChains)
 export(MultipleSetupAndPosterior)
+export(ParallelPosteriorafterBurnin)
 export(PlotExposure)
 export(PlotExposureByRange)
 export(RunHdpParallel)
