Add new function: Generateppindex to clean up PrepInit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ export(AnalyzeAndPlotretval)
 export(BurninIteration)
 export(ChainsDiagnosticPlot)
 export(CombinePosteriorChains)
+export(Generateppindex)
 export(MultipleSetupAndPosterior)
 export(ParallelPosteriorafterBurnin)
 export(PlotExposure)
 export(PlotExposureByRange)
+export(PrepInit)
 export(RunHdpParallel)
 export(SetupAndActivate)
 export(SetupAndPosterior)
