--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ActivateAndBurnin)
 export(AnalyzeAndPlotretval)
 export(BurninIteration)
 export(ChainsDiagnosticPlot)
+export(CleanChlist)
 export(CombinePosteriorChains)
 export(Generateppindex)
 export(MultipleSetupAndPosterior)
