Add GenerateAverageCluster to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(ChainsDiagnosticPlot)
 export(CleanChlist)
 export(CombinePosteriorChains)
 export(ExtendBurnin)
+export(GenerateAverageCluster)
 export(Generateppindex)
 export(MultipleSetupAndPosterior)
 export(ParallelPosteriorafterBurnin)
