--- a/tests/testthat/.gitignore
+++ b/tests/testthat/.gitignore
@@ -3,3 +3,5 @@ SBS96.ground.truth/ground
 test-RunAnd..etc4_out_dir
 test-RunAnd..etc5_out_dir
 RunAndEvalHdp5-fast96-2-cores
+20206212.burnin.lik.pdf
+20206212.burnin.output.Rdata
