--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mSigHdp
 Title: Mutational signature extraction using hdp (Hierarchical Dirichlet Process)
-Version: 0.0.0.9032
+Version: 1.0.0
 Authors@R: 
     person(given = "Steven",
            family = "Rozen",
@@ -12,6 +12,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Language: en-US
+BuildManual: no
 biocViews:
 Imports: hdpx (>= 0.1.5.0014),
     ICAMS (>= 2.1.2.9014),
