Create function for setup hdp_prior_init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,12 @@ export(CleanChlist)
 export(CombinePosteriorChains)
 export(ExtendBurnin)
 export(GenerateAverageCluster)
+export(GeneratePriorppindex)
 export(Generateppindex)
 export(MultipleSetupAndPosterior)
 export(ParallelPosteriorafterBurnin)
 export(PrepInit)
+export(PriorSetupAndActivate)
 export(RunHdpParallel)
 export(SetupAndActivate)
 export(SetupAndPosterior)
