--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 .Rhistory
 .RData
 .Ruserdata
+initial.chlist.Rdata
+sample.chain.1020726.Rdata
+sample.chain.2020726.Rdata
+sample.chain.3020726.Rdata
+sample.chain.4020726.Rdata
+sample.chain.5020726.Rdata
