--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.5)
 RoxygenNote: 7.1.1
 Remotes: github::steverozen/hdpx,
-    github::steverozen/ICAMS,
+    github::steverozen/ICAMS@master,
     github::WuyangFF95/SynSigEval
 Suggests: 
     testthat,
