NewChainsDiagnosticPlot, NewCombinePosteriorChains function that incorporating new extraction function in hdpx. These two are still under testing.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(GenerateAverageCluster)
 export(GeneratePriorppindex)
 export(Generateppindex)
 export(MultipleSetupAndPosterior)
+export(NewCombinePosteriorChains)
 export(PrepInit)
 export(PriorSetupAndActivate)
 export(RunHdpParallel)
