New functions that incorporate new extraction functions from hdpx. The old pipeline was kept because new one is under testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,15 @@
 export(AnalyzeAndPlotretval)
 export(ChainBurnin)
 export(ChainsDiagnosticPlot)
+export(ChainsDiagnosticPlotMo)
 export(CleanChlist)
+export(CombineChainsAndExtractSigs)
 export(CombinePosteriorChains)
 export(ExtendBurnin)
 export(GenerateAverageCluster)
 export(GeneratePriorppindex)
 export(Generateppindex)
 export(MultipleSetupAndPosterior)
-export(NewCombinePosteriorChains)
 export(PrepInit)
 export(PriorSetupAndActivate)
 export(RunHdpParallel)
