--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(GenerateAverageCluster)
 export(GeneratePriorppindex)
 export(Generateppindex)
 export(MultipleSetupAndPosterior)
+export(NewRunHdpParallel)
 export(PrepInit)
 export(PriorSetupAndActivate)
 export(RunHdpParallel)
