MatchSigsAndRelabel was moved to ICAMSxtra

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,17 +14,13 @@ LazyData: true
 Language: en-US
 BuildManual: no
 biocViews:
-Imports: hdpx (>= 0.1.5.0014),
-    ICAMS,
-    ICAMSxtra,
-    SynSigGen
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.5)
 RoxygenNote: 7.1.1
-Remotes: github::steverozen/hdpx,
-    github::steverozen/ICAMSxtra,
-    github::WuyangFF95/SynSigEval
-Suggests: 
+Remotes: github::steverozen/hdpx@*release,
+    github::steverozen/ICAMSxtra@*release
+Imports: hdpx (>= 0.1.7),
+    ICAMS (>= 2.2.3)
+Suggests: ICAMSxtra (>= 0.0.2),
     testthat,
-    utils,
-    SynSigEval
+    utils
