Added the r_github_packages: info into .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,4 @@ warnings_are_errors: false
 # Package 'XML' is not available for R old release version 3.6.3 on CRAN
 r_github_packages:
   - cran/XML
+  - steverozen/hdpx
