--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 export(AnalyzeAndPlotretval)
 export(ChainBurnin)
 export(ChainsDiagnosticPlot)
-export(ChainsDiagnosticPlotMo)
 export(CleanChlist)
 export(CombineChainsAndExtractSigs)
 export(CombinePosteriorChains)
+export(ComponentDiagnosticPlotting)
 export(ExtendBurnin)
 export(GenerateAverageCluster)
 export(GeneratePriorppindex)
