Fix documentations; add new diagnostic function ComponentDiagnosticPlotting; add tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(GeneratePriorppindex)
 export(Generateppindex)
 export(MultipleSetupAndPosterior)
 export(NewRunHdpParallel)
+export(PlotSamplesHighSigExp)
 export(PrepInit)
 export(PriorSetupAndActivate)
 export(RunHdpParallel)
@@ -20,4 +21,6 @@ export(SetupAndActivate)
 export(SetupAndPosterior)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
+importFrom(graphics,barplot)
 importFrom(graphics,par)
+importFrom(reshape2,melt)
