more file and function name reorganization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,11 +12,11 @@ export(GenerateAverageCluster)
 export(GeneratePriorppindex)
 export(Generateppindex)
 export(MultipleSetupAndPosterior)
-export(NewRunHdpParallel)
 export(PlotSamplesHighSigExp)
 export(PrepInit)
 export(PriorSetupAndActivate)
 export(RunHdpParallel)
+export(RunHdpxParallel)
 export(SetupAndActivate)
 export(SetupAndPosterior)
 importFrom(grDevices,dev.off)
