testthat clean up. template script cleanup. Update version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,10 @@ export(GenerateAverageCluster)
 export(GeneratePriorppindex)
 export(Generateppindex)
 export(MultipleSetupAndPosterior)
+export(OldRunHdpParallel)
 export(PlotSamplesHighSigExp)
 export(PrepInit)
 export(PriorSetupAndActivate)
-export(RunHdpParallel)
 export(RunHdpxParallel)
 export(SetupAndActivate)
 export(SetupAndPosterior)
