--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mSigHdp
 Title: Mutational signature extraction using hdp (Hierarchical Dirichlet Process)
-Version: 1.1.2
+Version: 1.1.2001
 Authors@R: 
     c(person(given = "Steven",
            family = "Rozen",
@@ -12,7 +12,9 @@ Authors@R:
            role = c("aut"),
            email = "mo.liu@u.duke.nus.edu",
            comment = c(ORCID = "0000-0001-5990-6585")))
-Description: Adapts HDP to mutational signature extraction. Calls hdpx for mutational signature analysis.
+Description: Adapts HDP to mutational signature extraction. Calls hdpx for mutational signature analysis.mSigHdp 
+             incorporates burnin and Gibbs sampling processes, followed up by extracting signatures from raw clusters 
+             collected by Gibbs sampling, and improved diagnostic plotting with visualization on signature and exposures.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -20,7 +22,7 @@ Language: en-US
 BuildManual: no
 biocViews:
 Roxygen: list(markdown = TRUE)
-Depends: R (>= 3.5)
+Depends: R (>= 4.0)
 RoxygenNote: 7.1.1
 Remotes: github::steverozen/hdpx@*release,
     github::steverozen/ICAMSxtra@*release
