increased the min version of hdpx to be used

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,12 +22,11 @@ Language: en-US
 BuildManual: no
 biocViews:
 Roxygen: list(markdown = TRUE)
-Depends: R (>= 4.0),
-  hdpx (>= 0.3.200)
+Depends: R (>= 4.0)
 RoxygenNote: 7.1.1
 Remotes: github::steverozen/hdpx@*release,
     github::steverozen/ICAMSxtra@*release
-Imports: hdpx (>= 0.3.0),
+Imports: hdpx (>= 0.3.200),
     ICAMS (>= 2.2.4),
     reshape2
 Suggests: ICAMSxtra (>= 0.0.2),
