--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,5 +33,9 @@ Imports: hdpx (>= 0.3.8),
     mSigAct (>= 2.1.3.9007),
     reshape2,
     data.table
-Suggests: testthat,
+Suggests: 
+    rmarkdown,
+    knitr,
+    testthat,
     utils
+VignetteBuilder: knitr
