--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mSigHdp
 Title: Mutational signature extraction using hdp (Hierarchical Dirichlet Process)
-Version: 0.0.0.9016
+Version: 0.0.0.9017
 Authors@R: 
     person(given = "Steven",
            family = "Rozen",
@@ -14,13 +14,11 @@ Encoding: UTF-8
 LazyData: true
 Language: en-US
 biocViews:
-Imports: hdpx (>= 0.1.5.0015),
-    SynSigGen
+Imports: SynSigGen
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.5)
 RoxygenNote: 7.1.0
-Remotes: github::steverozen/hdpx,
-    github::steverozen/SynSigGen,
+Remotes: github::steverozen/SynSigGen,
     github::WuyangFF95/SynSigEval
 Suggests: 
     testthat,
