added ability to downsample input spectra

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(CombineChainsAndExtractSigs)
 export(ExtendBurnin)
 export(GibbsSamplingAfterBurnin)
 export(RunHdpxParallel)
+export(downsample)
+export(downsample_spectra)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(graphics,barplot)
