--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mSigHdp
 Title: Mutational signature discovery using HDP (hierarchical Dirichlet process)
-Version: 2.0.1.0010
+Version: 2.0.3
 Authors@R: 
     c(person(given = "Steven",
            family = "Rozen",
@@ -32,13 +32,13 @@ biocViews:
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 4.0)
 RoxygenNote: 7.2.0
-Remotes: github::steverozen/hdpx@master,
-    github::steverozen/mSigAct@*release,
-    github::steverozen/ICAMS@*release
+Remotes: github::steverozen/hdpx@v1.0.3-branch,
+    github::steverozen/mSigAct@v2.3.3-branch,
+    github::steverozen/ICAMS@v3.0.6-branch
 Imports: data.table,
-    hdpx (>= 1.0.3.0009),
+    hdpx (>= 1.0.3),
     ICAMS (>= 2.2.4),
-    mSigAct (>= 2.1.3.9007),
+    mSigAct (>= 2.1.3),
     reshape2
 Suggests: cosmicsig,
     knitr,
