--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Remotes: github::steverozen/hdpx@*release,
     github::steverozen/ICAMSxtra@*release
 Imports: hdpx (== 0.3.0),
     ICAMS (>= 2.2.4),
+    ICAMSxtra (== 0.0.2),
     reshape2
-Suggests: ICAMSxtra (>= 0.0.2),
+Suggests: 
     testthat,
     utils
