--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,11 +22,11 @@ biocViews:
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.5)
 RoxygenNote: 7.1.1
-Remotes: github::steverozen/hdpx@*release,
-    github::steverozen/ICAMSxtra@*release
+Remotes: github::steverozen/hdpx@0.3.0-branch,
+    github::steverozen/ICAMSxtra@v0.0.8-branch
 Imports: hdpx (== 0.3.0),
     ICAMS (>= 2.2.4),
-    ICAMSxtra (== 0.0.2),
+    ICAMSxtra (== 0.0.8),
     reshape2
 Suggests: 
     testthat,
