Added function `show_downsample_curves`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(GibbsSamplingAfterBurnin)
 export(RunHdpxParallel)
 export(downsample)
 export(downsample_spectra)
+export(show_downsample_curves)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(graphics,barplot)
