more work on show_downsample_curves

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,8 @@ export(show_downsample_curves)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(graphics,barplot)
+importFrom(graphics,lines)
 importFrom(graphics,par)
+importFrom(graphics,points)
+importFrom(graphics,text)
 importFrom(reshape2,melt)
