--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,8 +32,8 @@ biocViews:
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 4.0)
 RoxygenNote: 7.2.1
-Remotes: github::steverozen/hdpx@master,
-    github::steverozen/ICAMS@*release
+Remotes: github::steverozen/hdpx@v1.0.5-branch,
+    github::steverozen/ICAMS@v3.0.6-branch
 Imports: data.table,
     hdpx (>= 1.0.5),
     ICAMS (>= 2.2.4),
